<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="260dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="@drawable/cinetriomphe"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center|bottom"

                    android:background="#80000000">



                    <TextView
                        android:id="@+id/signin"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:padding="16sp"/>

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="#E53935"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="16dp"/>

                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_white"
                    android:visibility="gone"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:backgroundTint="#E53935"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>


            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="text"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_shape_1"
                android:drawablePadding="16dp"
                />

            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:inputType="text"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_shape_1"
                android:drawablePadding="16dp"
                />


            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/ic_shapes_2"
                android:drawablePadding="16dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000" />

            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/ic_shapes_2"
                android:drawablePadding="16dp"
                android:hint="@string/telephone"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="#000" />



            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/utilisateur"
                android:inputType="text"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_shape_1"
                android:drawablePadding="16dp"
                />


            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="#f0f0f4"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="12dp"
                android:drawableLeft="@drawable/ic_tool_6"
                android:drawablePadding="16dp"
                />

            <devteam.esih.triomphe.customfonts.MyEditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mot de passe (a nouveau)"
                android:inputType="textPassword"
                android:background="#f0f0f4"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="12dp"
                android:drawableLeft="@drawable/ic_tool_6"
                android:drawablePadding="16dp"
                />

            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                android:padding="14dp"
                android:text="Creer un compte"
                android:clickable="true"
                android:textSize="16sp"
                android:textColor="#fff"
                />


            <devteam.esih.triomphe.customfonts.MyTextView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Se connecter avec Facebook"
                android:textSize="16sp"
                android:layout_gravity="center"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>


