<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/retangle"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ev_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_commercial_air_company"/>

<LinearLayout
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">

        <devteam.esih.triomphe.customfonts.MyTextView_Medium
            android:id="@+id/ev_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="5dp"
            tools:text="@string/departure"/>


    <devteam.esih.triomphe.customfonts.MyTextView_Bold
        android:id="@+id/ev_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/bold"
        android:textSize="16dp"
        android:textColor="#2d2d2d"
        android:layout_marginTop="3dp"
        android:textStyle="bold"/>

    <devteam.esih.triomphe.customfonts.MyTextView_Medium
        android:id="@+id/ev_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="#b2b2b2"
        android:text="Nikola Tesla Airport" />

</LinearLayout>


        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_transport"/>




    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#E3E3E3"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

           <ImageView
               android:id="@+id/clock"
               android:layout_width="13dp"
               android:layout_height="13dp"
               android:layout_marginLeft="15dp"
               android:layout_gravity="center"
               android:background="@drawable/ic_clock"/>

            <devteam.esih.triomphe.customfonts.MyTextView_Medium
                android:id="@+id/ev_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#b2b2b2"
                android:layout_gravity="center"

                android:text="6h 21m - 1 stop , DXB"/>


            <devteam.esih.triomphe.customfonts.MyTextView_Bold
                android:id="@+id/ev_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textColor="#2c2c2c"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:text="@string/price"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>